Add updating ingredient.